change title in index.html.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>NewDevs.Music</title>
+        <title>E-nstruments</title>
 
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         
