--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-4">
                 <div class="col">
                   <div class="col1">
-                    <a href=""><img src="images/drum.png" class="instrument card-img-top" alt=""></a>
+                    <a href="./instruments/drum.html"><img src="images/drum.png" class="instrument card-img-top" alt=""></a>
                     <h3 class="inst-text">Drum</h3>                    
                   </div>
                 </div>
