--- a/instruments/drum.html
+++ b/instruments/drum.html
@@ -83,12 +83,28 @@
           Play <strong>Drums</strong> On
           <strong style="color: #ae3a5e">E-nstruments</strong>!
         </h1>
-        <img
-          class="responsive-img"
-          src="../images/drumset/main.png"
-          alt="drum-set"
-        />
+        <div class="position-relative glass">
+          <img class="eclipse" src="../images/drumset/Eclipse.png" />
+          <img class="eclipse2" src="../images/drumset/Eclipse2.png" />
+          <img
+            class="responsive-img"
+            src="../images/drumset/main3.png"
+            alt="drum-set"
+          />
+          <button class="button Y">Y</button>
+          <button class="button U">U</button>
+          <button class="button X">X</button>
+          <button class="button R">R</button>
+          <button class="button E">E</button>
+          <button class="button C">C</button>
+          <button class="button S">S</button>
+          <button class="button D">D</button>
+          <button class="button G">G</button>
+          <button class="button H">H</button>
+        </div>
       </div>
     </section>
   </body>
+
+  <script src="./drum.js" charset="utf-8"></script>
 </html>
