fix button placement and sound

--- a/instruments/drum.html
+++ b/instruments/drum.html
@@ -2,6 +2,7 @@
   <head>
     <title>E-nstruments</title>
 
+    <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
 
     <!-- bootstrap -->
@@ -84,27 +85,33 @@
           <strong style="color: #ae3a5e">E-nstruments</strong>!
         </h1>
         <div class="position-relative glass">
-          <img class="eclipse" src="../images/drumset/Eclipse.png" />
-          <img class="eclipse2" src="../images/drumset/Eclipse2.png" />
           <img
             class="responsive-img"
-            src="../images/drumset/main3.png"
+            src="../images/drumset/main4.png"
             alt="drum-set"
           />
-          <button class="button Y">Y</button>
-          <button class="button U">U</button>
-          <button class="button X">X</button>
-          <button class="button R">R</button>
-          <button class="button E">E</button>
-          <button class="button C">C</button>
-          <button class="button S">S</button>
-          <button class="button D">D</button>
-          <button class="button G">G</button>
-          <button class="button H">H</button>
+          <img class="eclipse" src="../images/drumset/Eclipse.png" />
+          <img class="eclipse2" src="../images/drumset/Eclipse2.png" />
+
+          <button class="drum button Y">Y</button>
+          <button class="drum button U">U</button>
+          <button class="drum button X">X</button>
+          <button class="drum button R">R</button>
+          <button class="drum button E">E</button>
+          <button class="drum button C">C</button>
+          <button class="drum button S">S</button>
+          <button class="drum button D">D</button>
+          <button class="drum button G">G</button>
+          <button class="drum button H">H</button>
+          <button class="drum button J">J</button>
         </div>
       </div>
     </section>
   </body>
 
   <script src="./drum.js" charset="utf-8"></script>
+
+  <footer>
+    <h6 class="footer">Designed by YS7<br /><br />built by MJ10</h6>
+  </footer>
 </html>
