--- a/instruments/drum.html
+++ b/instruments/drum.html
@@ -1,117 +1,117 @@
 <html>
-  <head>
-    <title>E-nstruments</title>
 
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
+<head>
+  <title>E-nstruments</title>
 
-    <!-- bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
 
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Biryani:wght@400;700&family=Bruno+Ace+SC&family=Merriweather&family=Montserrat:wght@100;400;900&family=Ubuntu:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+  <!-- bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
 
-    <!-- CSS -->
-    <link href="./instrument-styles.css" rel="stylesheet" />
-  </head>
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Biryani:wght@400;700&family=Bruno+Ace+SC&family=Merriweather&family=Montserrat:wght@100;400;900&family=Outfit:wght@400;900&family=Ubuntu:wght@400;700&display=swap"
+    rel="stylesheet">
 
-  <body>
-    <section id="head">
-      <div class="main">
-        <!-- Nav Bar -->
-        <div class="navi">
-          <nav
-            class="navbar navbar-expand-lg bg-body-tertiary py-lg-0 py-md-2 py-sm-4 navbar-custom"
-          >
-            <div class="container-fluid">
-              <img
-                class="logo"
-                style="background-color: #ae3a5e; width: 60px; height: 60px"
-                src="../images/logo.png"
-              />
-              <a class="navbar-brand" href="../index.html">E-nstruments</a>
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarTogglerDemo02"
-                aria-controls="navbarTogglerDemo02"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Instruments</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">FAQ</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Us</a>
-                  </li>
-                </ul>
-              </div>
+  <!-- CSS -->
+  <link href="./drum.css" rel="stylesheet" />
+</head>
+
+<body>
+  <section id="head">
+    <div class="main">
+      <!-- Nav Bar -->
+      <div class="navi">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary py-lg-0 py-md-2 py-sm-4 navbar-custom">
+          <div class="container-fluid">
+            <img class="logo" style="background-color: #ae3a5e; width: 60px; height: 60px" src="../images/logo.png" />
+            <a class="navbar-brand" href="../index.html">E-nstruments</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+              aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Instruments</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">FAQ</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contact Us</a>
+                </li>
+              </ul>
             </div>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section id="instrument">
-      <div class="play">
-        <h1>
-          Play <strong>Drums</strong> On
-          <strong style="color: #ae3a5e">E-nstruments</strong>!
-        </h1>
-        <div class="position-relative glass">
-          <img
-            class="responsive-img"
-            src="../images/drumset/main4.png"
-            alt="drum-set"
-          />
-          <img class="eclipse" src="../images/drumset/Eclipse.png" />
-          <img class="eclipse2" src="../images/drumset/Eclipse2.png" />
+  <section id="instrument">
+    <div class="play">
+      <h1>
+        Play <strong>Drums</strong> On
+        <strong style="color: #ae3a5e">E-nstruments</strong>!
+      </h1>
+      <div class="position-relative glass">
+        <img class="responsive-img" src="../images/drumset/main4.png" alt="drum-set" />
+        <img class="eclipse" src="../images/drumset/Eclipse.png" />
+        <img class="eclipse2" src="../images/drumset/Eclipse2.png" />
 
-          <button class="drum button Y">Y</button>
-          <button class="drum button U">U</button>
-          <button class="drum button X">X</button>
-          <button class="drum button R">R</button>
-          <button class="drum button E">E</button>
-          <button class="drum button C">C</button>
-          <button class="drum button S">S</button>
-          <button class="drum button D">D</button>
-          <button class="drum button G">G</button>
-          <button class="drum button H">H</button>
-          <button class="drum button J">J</button>
-        </div>
+        <button class="drum button y">y</button>
+        <button class="drum button u">u</button>
+        <button class="drum button x">x</button>
+        <button class="drum button r">r</button>
+        <button class="drum button e">e</button>
+        <button class="drum button c">c</button>
+        <button class="drum button s">s</button>
+        <button class="drum button d">d</button>
+        <button class="drum button g">g</button>
+        <button class="drum button h">h</button>
+        <button class="drum button j">j</button>
       </div>
-    </section>
-  </body>
+    </div>
+  </section>
 
-  <script src="./drum.js" charset="utf-8"></script>
+  <div class="info">
+    <h1>How to play drums online?</h1>
+    <p>
+      Use your computer keyboard or click the drum kit to play the virtual drums. You can use the following shortcuts:
+    <ul>
+      <li>Crash cymbal : <strong>y</strong></li>
+      <li>Ride cymbal : <strong>u</strong></li>
+      <li>Hi-hat (closed) : <strong>r</strong></li>
+      <li>Hi-hat (open) : <strong>e</strong></li>
+      <li>Hi-hat (foot) : <strong>c</strong></li>
+      <li>High tom : <strong>g</strong></li>
+      <li>Low tom : <strong>h</strong></li>
+      <li>Floor tom : <strong>j</strong></li>
+      <li>Snare Drum : <strong>s</strong></li>
+      <li>Snare drum (cross stick) : <strong>d</strong></li>
+      <li>Bass drum : <strong>x</strong></li>
+    </ul>
+    Drummers often use their right hand to play the cymbals (crash cymbal, ride cymbal, and hi-hat), and their left hand
+    to play the snare drum. When using shortcuts, use the left hand to play both the snare drum and the bass drum.
+    </p>
+  </div>
+</body>
 
-  <footer>
-    <h6 class="footer">Designed by YS7<br /><br />built by MJ10</h6>
-  </footer>
+<script src="./drum.js" charset="utf-8"></script>
+
+<footer>
+  <h6 class="footer">Designed by YS7<br /><br />built by MJ10</h6>
+</footer>
+
 </html>
