creat new folders

--- a/instruments/drum.html
+++ b/instruments/drum.html
@@ -21,7 +21,7 @@
     rel="stylesheet">
 
   <!-- CSS -->
-  <link href="./drum.css" rel="stylesheet" />
+  <link href="./instrument-styles/drum.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -108,7 +108,7 @@
   </div>
 </body>
 
-<script src="./drum.js" charset="utf-8"></script>
+<script src="./instrument-js/drum.js" charset="utf-8"></script>
 
 <footer>
   <h6 class="footer">Designed by YS7<br /><br />built by MJ10</h6>
