link guitar to main

--- a/index.html
+++ b/index.html
@@ -1,158 +1,166 @@
 <html>
-    <head>
-        <title>E-nstruments</title>
 
-        <meta content="width=device-width, initial-scale=1" name="viewport" />
-        
-        <!-- bootstrap -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+<head>
+  <title>E-nstruments</title>
 
-        <!-- Google Fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Biryani:wght@400;700&family=Bruno+Ace+SC&family=Merriweather&family=Montserrat:wght@100;400;900&family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
 
-        <!-- CSS -->
-        <link href="css/styles.css" rel="stylesheet">
-    </head>
+  <!-- bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
 
-    <body>
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Biryani:wght@400;700&family=Bruno+Ace+SC&family=Merriweather&family=Montserrat:wght@100;400;900&family=Ubuntu:wght@400;700&display=swap"
+    rel="stylesheet">
 
-      <!-- splash image -->
+  <!-- CSS -->
+  <link href="css/styles.css" rel="stylesheet">
+</head>
 
-      <div class="splash elementToFadeInAndOut">
-        <!-- <h1 class="splash-text">E-NSTRUMENTS</h1> -->
-        <img class="splash-img" src="/images/graffiti1.png">
+<body>
+
+  <!-- splash image -->
+
+  <div class="splash elementToFadeInAndOut">
+    <!-- <h1 class="splash-text">E-NSTRUMENTS</h1> -->
+    <img class="splash-img" src="/images/graffiti1.png">
+  </div>
+
+  <section id="head">
+    <div class="main">
+      <!-- Nav Bar -->
+      <div class="navi">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary py-lg-0 py-md-2 py-sm-4 navbar-custom">
+          <div class="container-fluid">
+            <img class="logo" style="background-color: #AE3A5E; width: 60px; height: 60px;" src="images/logo.png">
+            <a class="navbar-brand" href="#">E-nstruments</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+              aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Instruments</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">FAQ</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contact Us</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
       </div>
 
-        <section id="head">
-            <div class="main">
-<!-- Nav Bar -->
-            <div class="navi">
-                <nav class="navbar navbar-expand-lg bg-body-tertiary py-lg-0 py-md-2 py-sm-4 navbar-custom">
-                    <div class="container-fluid">
-                        <img class="logo" style="background-color: #AE3A5E; width: 60px; height: 60px;" src="images/logo.png">
-                      <a class="navbar-brand" href="#">E-nstruments</a>
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                      </button>
-                      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Instruments</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">FAQ</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Contact Us</a>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </nav>                   
-            </div>
+      <img class="hero" src="images/main.png" alt="pic">
 
-                <img class="hero" src="images/main.png" alt="pic">
+    </div>
+  </section>
 
-            </div>
-        </section>
+  <section id="why-us">
 
-        <section id="why-us">
+    <div class="why-us">
 
-            <div class="why-us">
-                
-                <div class="features">
-                    <h1>Why choose <strong style="color: #AE3A5E;">NEWDEVS.MUSIC</strong>?</h1>
-                    <div class="row">
-                      <div class="feature-box col-lg-4 col-md-12 col-sm-12">
-                        <img src="images/1.png">
-                        <h3><br>Easy to use.</h3>
-                        <h6>Just select any instrument and start playing!</h6>
-                      </div>
-                      <div class="feature-box col-lg-4 col-md-12 col-sm-12">
-                        <img src="images/3.png">
-                        <h3><br>Quality Sound.</h3>
-                        <h6>Best in class studio quality sound for best experience!</h6>
-                      </div>
-                      <div class="feature-box col-lg-4 col-md-12 col-sm-12">
-                        <img src="images/2.png">
-                        <h3><br>Wide Choice.</h3>
-                        <h6>We have a wide variety of instruments to choose from!</h6>
-                      </div>
-                    </div>
-                </div>
-            </div>
+      <div class="features">
+        <h1>Why choose <strong style="color: #AE3A5E;">NEWDEVS.MUSIC</strong>?</h1>
+        <div class="row">
+          <div class="feature-box col-lg-4 col-md-12 col-sm-12">
+            <img src="images/1.png">
+            <h3><br>Easy to use.</h3>
+            <h6>Just select any instrument and start playing!</h6>
+          </div>
+          <div class="feature-box col-lg-4 col-md-12 col-sm-12">
+            <img src="images/3.png">
+            <h3><br>Quality Sound.</h3>
+            <h6>Best in class studio quality sound for best experience!</h6>
+          </div>
+          <div class="feature-box col-lg-4 col-md-12 col-sm-12">
+            <img src="images/2.png">
+            <h3><br>Wide Choice.</h3>
+            <h6>We have a wide variety of instruments to choose from!</h6>
+          </div>
+        </div>
+      </div>
+    </div>
 
-        </section>
+  </section>
 
-        <section id="instruments">
+  <section id="instruments">
 
-            <h1 style="text-align: center; color: white;"><br><strong>Instruments</strong></h1>
+    <h1 style="text-align: center; color: white;"><br><strong>Instruments</strong></h1>
 
-            <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-4">
-                <div class="col">
-                  <div class="col1">
-                    <a href="./instruments/drum.html"><img src="images/drum.png" class="instrument card-img-top" alt=""></a>
-                    <h3 class="inst-text">Drum</h3>                    
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="col1">
-                    <a href=""><img src="images/xylophone.png" class="instrument card-img-top" alt=""></a>
-                  <h3 class="inst-text">Xylophone</h3>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="col1">
-                    <a href=""><img src="images/keyboard.png" class="instrument card-img-top" alt=""></a>
-                    <h3 class="inst-text">Keyboard</h3>   
-                  </div>       
-                </div>
-                <div class="col">
-                  <div class="col1">
-                    <a href=""><img src="images/bass-guitar.png" class="instrument card-img-top" alt=""></a>
-                    <h3 class="inst-text">Bass-Guitar</h3>  
-                  </div>
-                </div>
-              </div>
+    <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-4">
+      <div class="col">
+        <div class="col1">
+          <a href="./instruments/drum.html"><img src="images/drum.png" class="instrument card-img-top" alt=""></a>
+          <h3 class="inst-text">Drum</h3>
+        </div>
+      </div>
+      <div class="col">
+        <div class="col1">
+          <a href=""><img src="images/xylophone.png" class="instrument card-img-top" alt=""></a>
+          <h3 class="inst-text">Xylophone</h3>
+        </div>
+      </div>
+      <div class="col">
+        <div class="col1">
+          <a href=""><img src="images/keyboard.png" class="instrument card-img-top" alt=""></a>
+          <h3 class="inst-text">Keyboard</h3>
+        </div>
+      </div>
+      <div class="col">
+        <div class="col1">
+          <a href=""><img src="images/bass-guitar.png" class="instrument card-img-top" alt=""></a>
+          <h3 class="inst-text">Bass-Guitar</h3>
+        </div>
+      </div>
+    </div>
 
-              <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-4">
-                <div class="col">
-                  <div class="col1">
-                    <a href=""><img src="images/guitar.png" class="instrument card-img-top" alt=""></a>
-                    <h3 class="inst-text">Guitar</h3>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="col1">
-                    <a href=""><img src="images/bongo.png" class="instrument card-img-top" alt=""></a>
-                    <h3 class="inst-text">Bongo</h3>                   
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="col1">
-                    <a href=""><img src="images/sitar.png" class="instrument card-img-top" alt=""></a>
-                    <h3 class="inst-text">Sitar</h3>                     
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="col1">
-                    <a href=""><img src="images/pan-flute.png" class="instrument card-img-top" alt=""></a>
-                    <h3 class="inst-text">Pan-Flute</h3>                    
-                  </div>
-                </div>
-              </div>
+    <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-4">
+      <div class="col">
+        <div class="col1">
+          <a href="./instruments/guitar.html"><img src="images/guitar.png" class="instrument card-img-top" alt=""></a>
+          <h3 class="inst-text">Guitar</h3>
+        </div>
+      </div>
+      <div class="col">
+        <div class="col1">
+          <a href=""><img src="images/bongo.png" class="instrument card-img-top" alt=""></a>
+          <h3 class="inst-text">Bongo</h3>
+        </div>
+      </div>
+      <div class="col">
+        <div class="col1">
+          <a href=""><img src="images/sitar.png" class="instrument card-img-top" alt=""></a>
+          <h3 class="inst-text">Sitar</h3>
+        </div>
+      </div>
+      <div class="col">
+        <div class="col1">
+          <a href=""><img src="images/pan-flute.png" class="instrument card-img-top" alt=""></a>
+          <h3 class="inst-text">Pan-Flute</h3>
+        </div>
+      </div>
+    </div>
 
-        </section>
+  </section>
 
-    </body>
+</body>
 
-    <footer>
-        <h6 class="footer">Designed by YS7<br><br>built by MJ10</h6>
-    </footer>
+<footer>
+  <h6 class="footer">Designed by YS7<br><br>built by MJ10</h6>
+</footer>
+
 </html>
