add files for piano

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
       </div>
       <div class="col">
         <div class="col1">
-          <a href=""><img src="images/keyboard.png" class="instrument card-img-top" alt=""></a>
-          <h3 class="inst-text">Keyboard</h3>
+          <a href="./instruments/piano.html"><img src="images/keyboard.png" class="instrument card-img-top" alt=""></a>
+          <h3 class="inst-text">Piano</h3>
         </div>
       </div>
       <div class="col">
