change descp. for guitar and piano

--- a/instruments/guitar.html
+++ b/instruments/guitar.html
@@ -92,21 +92,23 @@
             Use your computer keyboard or click the drum kit to play the virtual drums. You can use the following
             shortcuts:
         <ul>
-            <li>Crash cymbal : <strong>y</strong></li>
-            <li>Ride cymbal : <strong>u</strong></li>
-            <li>Hi-hat (closed) : <strong>r</strong></li>
-            <li>Hi-hat (open) : <strong>e</strong></li>
-            <li>Hi-hat (foot) : <strong>c</strong></li>
-            <li>High tom : <strong>g</strong></li>
-            <li>Low tom : <strong>h</strong></li>
-            <li>Floor tom : <strong>j</strong></li>
-            <li>Snare Drum : <strong>s</strong></li>
-            <li>Snare drum (cross stick) : <strong>d</strong></li>
-            <li>Bass drum : <strong>x</strong></li>
+            <p>Strings : Use keyboard shortcuts or simply click to play!</p>
+            <li>1st string : use e</li>
+            <li>2nd string : use b</li>
+            <li>3rd string : use g</li>
+            <li>4th string : use d</li>
+            <li>5th string : use a</li>
+            <li>6th string : use s</li>
+            <li>Adding more soon!</li>
+            <br>
+            <p>Chords : Use keyboard shortcuts or simply click to play!</p>
+            <li>C chord : use 1</li>
+            <li>D chord : use 2</li>
+            <li>Dm chord : use 3</li>
+            <li>E chord : use 4</li>
+            <li>Adding more soon!</li>
         </ul>
-        Drummers often use their right hand to play the cymbals (crash cymbal, ride cymbal, and hi-hat), and their left
-        hand
-        to play the snare drum. When using shortcuts, use the left hand to play both the snare drum and the bass drum.
+        Share your experience or request to add more on our mail !
         </p>
     </div>
 </body>
