--- a/instruments/piano.html
+++ b/instruments/piano.html
@@ -115,24 +115,15 @@
     <div class="info">
         <h1>How to play Piano online?</h1>
         <p>
-            Use your computer keyboard or click the drum kit to play the virtual drums. You can use the following
-            shortcuts:
+            Use your computer keyboard or click the piano keys to play the piano.
+
         <ul>
-            <li>Crash cymbal : <strong>y</strong></li>
-            <li>Ride cymbal : <strong>u</strong></li>
-            <li>Hi-hat (closed) : <strong>r</strong></li>
-            <li>Hi-hat (open) : <strong>e</strong></li>
-            <li>Hi-hat (foot) : <strong>c</strong></li>
-            <li>High tom : <strong>g</strong></li>
-            <li>Low tom : <strong>h</strong></li>
-            <li>Floor tom : <strong>j</strong></li>
-            <li>Snare Drum : <strong>s</strong></li>
-            <li>Snare drum (cross stick) : <strong>d</strong></li>
-            <li>Bass drum : <strong>x</strong></li>
+            <li>Black keys : Use the number rows and first alphabet row (from q to t) to play the black keys of the
+                piano
+                or simply click the buttons to play them!</li>
+            <li>White keys : Use the second alphabet row (from a to ') and the third alphabet row (from z to /) to play
+                the white keys of the piano or simply click the buttons to play! </li>
         </ul>
-        Drummers often use their right hand to play the cymbals (crash cymbal, ride cymbal, and hi-hat), and their left
-        hand
-        to play the snare drum. When using shortcuts, use the left hand to play both the snare drum and the bass drum.
         </p>
     </div>
 </body>
