fix navbar and links

--- a/index.html
+++ b/index.html
@@ -47,10 +47,21 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Instruments</a>
+                  <div class="dropdown">
+                    <span>Instruments</span>
+                    <div class="dropdown-content">
+                      <p><a href="./instruments/guitar.html">Guitar</a></p>
+                      <p><a href="./instruments/drum.html">Drum</a></p>
+                      <p><a href="./instruments/piano.html">Piano</a></p>
+                      <p><a href="./instruments/bongo.html">Bongo</a></p>
+                      <p><a href="./instruments/pan-flute.html">Pan-Flute</a></p>
+                      <p><a href="./instruments/xylophone.html">Xylophone</a></p>
+                      <p>More Coming Soon!</p>
+                    </div>
+                  </div>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">FAQ</a>
