--- a/instruments/guitar.html
+++ b/instruments/guitar.html
@@ -31,9 +31,9 @@
             <div class="navi">
                 <nav class="navbar navbar-expand-lg bg-body-tertiary py-lg-0 py-md-2 py-sm-4 navbar-custom">
                     <div class="container-fluid">
-                        <img class="logo" style="background-color: #ae3a5e; width: 60px; height: 60px"
-                            src="../images/logo.png" />
-                        <a class="navbar-brand" href="../index.html">E-nstruments</a>
+                        <img class="logo" style="background-color: #AE3A5E; width: 60px; height: 60px;"
+                            src="../images/logo.png">
+                        <a class="navbar-brand" href="#">E-nstruments</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -42,10 +42,21 @@
                         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Home</a>
+                                    <a class="nav-link" href="../index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Instruments</a>
+                                    <div class="dropdown">
+                                        <span>Instruments</span>
+                                        <div class="dropdown-content">
+                                            <p><a href="../instruments/guitar.html">Guitar</a></p>
+                                            <p><a href="../instruments/drum.html">Drum</a></p>
+                                            <p><a href="../instruments/piano.html">Piano</a></p>
+                                            <p><a href="../instruments/bongo.html">Bongo</a></p>
+                                            <p><a href="../instruments/pan-flute.html">Pan-Flute</a></p>
+                                            <p><a href="../instruments/xylophone.html">Xylophone</a></p>
+                                            <p>More Coming Soon!</p>
+                                        </div>
+                                    </div>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">FAQ</a>
