--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     rel="stylesheet">
 
   <!-- CSS -->
-  <link href="css/styles.css" rel="stylesheet">
+  <link href="./css/styles.css" rel="stylesheet">
 </head>
 
 <body>
