--- a/instruments/drum.html
+++ b/instruments/drum.html
@@ -80,7 +80,7 @@
         <button class="drum button d">d</button>
         <button class="drum button g">g</button>
         <button class="drum button h">h</button>
-        <button class="drum button j">‎ j‎ ‎ </button>
+        <button class="drum button j">j</button>
       </div>
     </div>
   </section>
