--- a/instruments/guitar.html
+++ b/instruments/guitar.html
@@ -33,7 +33,7 @@
                     <div class="container-fluid">
                         <img class="logo" style="background-color: #AE3A5E; width: 60px; height: 60px;"
                             src="../images/logo.png">
-                        <a class="navbar-brand" href="#">E-nstruments</a>
+                        <a class="navbar-brand" href="../index.html">E-nstruments</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
                             aria-expanded="false" aria-label="Toggle navigation">
