--- a/instruments/piano.html
+++ b/instruments/piano.html
@@ -33,7 +33,7 @@
                     <div class="container-fluid">
                         <img class="logo" style="background-color: #AE3A5E; width: 60px; height: 60px;"
                             src="../images/logo.png">
-                        <a class="navbar-brand" href="#">E-nstruments</a>
+                        <a class="navbar-brand" href="../index.html">E-nstruments</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +42,7 @@
                         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Home</a>
+                                    <a class="nav-link" href="../index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <div class="dropdown">
