--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
       </div>
       <div class="col">
         <div class="col1">
-          <a href=""><img src="images/xylophone.png" class="instrument card-img-top" alt=""></a>
+          <a href="./instruments/xylophone.html"><img src="images/xylophone.png" class="instrument card-img-top"
+              alt=""></a>
           <h3 class="inst-text">Xylophone</h3>
         </div>
       </div>
