--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
       </div>
       <div class="col">
         <div class="col1">
-          <a href=""><img src="images/pan-flute.png" class="instrument card-img-top" alt=""></a>
+          <a href="./instruments/pan-flute.html"><img src="images/pan-flute.png" class="instrument card-img-top"
+              alt=""></a>
           <h3 class="inst-text">Pan-Flute</h3>
         </div>
       </div>
