--- a/instruments/pan-flute.html
+++ b/instruments/pan-flute.html
@@ -21,7 +21,7 @@
         rel="stylesheet">
 
     <!-- CSS -->
-    <link href="./instrument-styles/guitar.css" rel="stylesheet" />
+    <link href="./instrument-styles/pan-flute.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -75,56 +75,66 @@
     <section id="instrument">
         <div class="play">
             <h1>
-                Play <strong>Guitar</strong> On
+                Play <strong>Pan-Flute</strong> On
                 <strong style="color: #ae3a5e">E-nstruments</strong>!
             </h1>
             <div class="position-relative glass">
-                <img class="responsive-img" src="../images/guitar/fretboard1.png" alt="drum-set" />
                 <img class="eclipse" src="../images/drumset/Eclipse.png" />
                 <img class="eclipse2" src="../images/drumset/Eclipse2.png" />
+                <img class="responsive-img" src="../images/pan-flute/pan-flute.png" alt="drum-set" />
 
+                <button class="button q">q</button>
+                <button class="button w">w</button>
                 <button class="button e">e</button>
-                <button class="button g">g</button>
-                <button class="button b">b</button>
-                <button class="button d">d</button>
+                <button class="button r">r</button>
+                <button class="button t">t</button>
+                <button class="button y">y</button>
+                <button class="button u">u</button>
+                <button class="button i">i</button>
                 <button class="button a">a</button>
-                <button class="button E6">s</button>
-                <button class="button one">1</button>
-                <button class="button two">2</button>
-                <button class="button three">3</button>
-                <button class="button four">4</button>
+                <button class="button s">s</button>
+                <button class="button d">d</button>
+                <button class="button f">f</button>
+                <button class="button g">g</button>
+                <button class="button h">h</button>
+                <button class="button j">j</button>
             </div>
         </div>
     </section>
 
     <div class="info">
-        <h1>How to play Guitar online?</h1>
+        <h1>How to play Pan-Flute online?</h1>
         <p>
-            Use your computer keyboard or click the guitar to play the virtual guitar. You can use the following
+            Use your computer keyboard or click the pan-flute to play the virtual pan-flute. You can use the following
             shortcuts:
         <ul>
             <p>Strings : Use keyboard shortcuts or simply click to play!</p>
-            <li>1st string : use e</li>
-            <li>2nd string : use b</li>
-            <li>3rd string : use g</li>
-            <li>4th string : use d</li>
-            <li>5th string : use a</li>
-            <li>6th string : use s</li>
-            <li>Adding more soon!</li>
             <br>
-            <p>Chords : Use keyboard shortcuts or simply click to play!</p>
-            <li>C chord : use 1</li>
-            <li>D chord : use 2</li>
-            <li>Dm chord : use 3</li>
-            <li>E chord : use 4</li>
-            <li>Adding more soon!</li>
+            <p>First alphabet row (Q to I) :</p>
+            <li>Pipe 1 : use q</li>
+            <li>Pipe 2 : use w</li>
+            <li>Pipe 3 : use e</li>
+            <li>Pipe 4 : use r</li>
+            <li>Pipe 5 : use t</li>
+            <li>Pipe 6 : use y</li>
+            <li>Pipe 7 : use u</li>
+            <li>Pipe 8 : use i</li>
+            <br>
+            <p>Second alphabet row (A to J):</p>
+            <li>Pipe 9 : use a</li>
+            <li>Pipe 10 : use s</li>
+            <li>Pipe 11 : use d</li>
+            <li>Pipe 12 : use f</li>
+            <li>Pipe 13 : use g</li>
+            <li>Pipe 14 : use h</li>
+            <li>Pipe 15 : use j</li>
         </ul>
         Share your experience or request to add more on our mail !
         </p>
     </div>
 </body>
 
-<script src="./instrument-js/guitar.js" charset="utf-8"></script>
+<script src="./instrument-js/pan-flute.js" charset="utf-8"></script>
 
 <footer>
     <h6 class="footer">Designed by YS7<br /><br />built by MJ10</h6>
