--- a/instruments/xylophone.html
+++ b/instruments/xylophone.html
@@ -103,7 +103,7 @@
     <div class="info">
         <h1>How to play Xylophone online?</h1>
         <p>
-            Use your computer keyboard or click the drum kit to play the virtual xylophone. You can use the following
+            Use your computer keyboard or click the pan-flute to play the virtual xylophone. You can use the following
             shortcuts:
         <ul>
             <p>Strings : Use keyboard shortcuts or simply click to play!</p>
